WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31487
DOMHTMLInputElement::rectOnScreen() returns the wrong rect
https://bugs.webkit.org/show_bug.cgi?id=31487
Summary
DOMHTMLInputElement::rectOnScreen() returns the wrong rect
Jon Honeycutt
Reported
2009-11-13 13:43:28 PST
DOMHTMLInputElement::rectOnScreen() returns the rect with the window, not within the screen.
Attachments
patch
(1.86 KB, patch)
2009-11-13 14:14 PST
,
Jon Honeycutt
darin
: review+
jhoneycutt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2009-11-13 14:14:15 PST
Created
attachment 43198
[details]
patch
Darin Adler
Comment 2
2009-11-13 14:18:07 PST
Comment on
attachment 43198
[details]
patch r=me How do you test this? Is there a way to test it with a manual test?
Jon Honeycutt
Comment 3
2009-11-17 14:35:09 PST
A manual test could test this, but it would only work in Safari. We don't seem to have a good way to test our bindings. Thanks for the review!
Jon Honeycutt
Comment 4
2009-11-17 15:39:18 PST
Landed in
r51090
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug