DOMHTMLInputElement::rectOnScreen() returns the wrong rect

https://bugs.webkit.org/show_bug.cgi?id=31487

Reviewed by Darin Adler.

* DOMHTMLClasses.cpp:
(DOMHTMLInputElement::rectOnScreen):
Return the rect on screen, not the rect in the window.

Canonical link: https://commits.webkit.org/42519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51090 268f45cc-cd09-0410-ab3c-d52691b4dbfc